--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">Social Network</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1 class="cover-heading"><img src="assets/logo.PNG" height = "200"></h1>
+    <p class="lead">A social media platform where developers can share what they are working on. Post your questions, links to your websites, photos of your work</p>
     <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signup">
   Sign Up
