Added needed images

--- a/public/mytimeline.html
+++ b/public/mytimeline.html
@@ -71,16 +71,8 @@
   </nav>
   <main role="main" class="container padding">
 
-    <div class = "row post">
-      <div class = "col-1"><img src="profile.png" width="50" height="50"></div>
-  
-      <div class = "col-7 mx-auto">
-      <div class="card">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newPost">New Post</button>
-          
-        </div>
-        </div>
-    </div>
+    <div id = "posts"></div>
+      
 
     <!-- Modal -->
 <div class="modal fade" id="newPost" tabindex="-1" role="dialog" aria-labelledby="newPostLabel" aria-hidden="true">
