--- a/public/myposts.html
+++ b/public/myposts.html
@@ -72,28 +72,7 @@
   </nav>
   <main role="main" class="container padding">
     
-  <div class = "row post">
-    <div class = "col-1"><img src="profile.png" width="50" height="50"></div>
-
-    <div class = "col-11">
-    <div class="card">
-        <div class="card-body popup">
-          
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">#express #hw</small></p>
-        </div>
-        <img src="placeholder.png" class="card-img-top" alt="..."width="300" height="200">
-
-        <div class="text-muted mx-auto">
-          2 days ago
-        </div>
-        <div class="card-footer text-muted mx-auto">
-            <button class="btn btn-primary" data-toggle="modal" data-target="#updateModal" id="updatedPost" >Update</button>
-            <button class="btn btn-danger" id = "deletePost">Delete</button>
-          </div>
-      </div>
-      </div>
-  </div>
+    <div id = "posts"></div>
   
       <!-- Modal -->
 <div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updatePostLabel" aria-hidden="true">
