--- a/public/index.html
+++ b/public/index.html
@@ -132,9 +132,10 @@
           <div class="alert alert-danger" hidden role="alert" id = "signupAlert">
           </div>
           <div class="form-group row">
-            <label for="file" class="col-sm-4 col-form-label popup">Avatar</label>
+            <label for="file" class="col-sm-4 col-form-label popup">Avatar *</label>
             <div class="col-sm-8">
-              <input type="file" class="form-control" id="file" accept=".jpg, .jpeg, .png">
+              <input type="file" class="form-control" id="file" onchange="readURL(this);" accept=".jpg, .jpeg, .png">
+              <img id="blah" src="#" alt="your image"/>
             </div>
           </div>
           <div class="form-group row">
