eighth commit (fixed server.js and passport.js)

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
 
     <!-- Favicons -->
+    <link rel="icon" href="assets/favicon.JPG">
 <link rel="apple-touch-icon" href="/docs/4.5/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/4.5/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="icon" href="/docs/4.5/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -58,7 +59,7 @@
 
   <main role="main" class="innercover" >
     <h1 class="cover-heading"><img src="assets/DevDecClear.png" height = "300"></h1>
-    <h2 id="motto">Developing The World By Connecting It’s Developers</h2>
+    <h2 id="motto"> Develop | Connect | Devs</h2>
     <p class="lead" id="runner">A social media platform where developers can share what they are working on. Post your questions, links to your websites, photos of your work</p>
     <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signup" id= "loginbtn">
