index and mytimeline done

--- a/public/myposts.html
+++ b/public/myposts.html
@@ -97,6 +97,8 @@
               <label for="file" class="col-sm-2 col-form-label popup">Image</label>
               <div class="col-sm-10">
                 <input type="file" class="form-control" id="file" accept=".jpg, .jpeg, .png">
+                <p class = "popup mx-auto">Or</p>
+                <input type="text" placeholder = "Enter file location" class="form-control" id="fileLoc">
               </div>
             </div>
   
