--- a/public/mytimeline.html
+++ b/public/mytimeline.html
@@ -100,8 +100,11 @@
             <div class="col-sm-10">
               <input type="file" class="form-control" id="file" onchange="readURL(this);" accept=".jpg, .jpeg, .png">
               <img id="blah" src="assets/1x1.png" alt="your image"/>
+              <p class = "popup mx-auto">Or</p>
+                <input type="text" placeholder = "Enter file location" class="form-control" id="fileLoc">
             </div>
           </div>
+
 
           <div class="form-group row">
             <label for="file" class="col-sm-2 col-form-label popup">Hashtag</label>
