--- a/public/mytimeline.html
+++ b/public/mytimeline.html
@@ -53,8 +53,8 @@
 
  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="/"><img src="assets/logo.PNG" height = "60"></a>
-    <form class="form-inline mt-2 mt-md-0 navbar-left">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+    <form class="form-inline mt-2 mt-md-0 navbar-left" id="searchForm">
+        <input class="form-control mr-sm-2" id ="searchTerm" type="text" placeholder="Search Hashtags" aria-label="Search">
         <button class="btn btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
       </form>
 
