--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -58,7 +58,7 @@
 
   <main role="main" class="innercover" >
     <h1 class="cover-heading"><img src="assets/DevDecClear.png" height = "300"></h1>
-    <h2 id="motto">Developing The World By Connecting It’s Developers</h2>
+    <h3 id="motto">DEVELOP | CONNECT | CREATE </h3>
     <p class="lead" id="runner">A social media platform where developers can share what they are working on. Post your questions, links to your websites, photos of your work</p>
     <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signup" id= "loginbtn">
