--- a/public/mytimeline.html
+++ b/public/mytimeline.html
@@ -1,5 +1,4 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -46,6 +45,7 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
+    <link href="css/timeline.css" rel="stylesheet">
   </head>
   <body>
    
@@ -76,7 +76,7 @@
   
       <div class = "col-7 mx-auto">
       <div class="card">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newPost">New Post</button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newPost" id="postbtn">New Post</button>
           
         </div>
         </div>
