Final code reviewed with team

--- a/public/myposts.html
+++ b/public/myposts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -17,7 +17,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js">
 
     <!-- Favicons -->
-    <link rel="icon" href="assets/favicon.JPG">
 <link rel="apple-touch-icon" href="/docs/4.5/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
 <link rel="icon" href="/docs/4.5/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
 <link rel="icon" href="/docs/4.5/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -46,7 +45,7 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
-    <link href="css/mypost.css" rel="stylesheet">
+    <link href="./css/mypost.css" rel="stylesheet">
   </head>
   <body id="foreground">
    
@@ -63,10 +62,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="navbar-nav ml-auto">
-        <li><a class="nav-item nav-link" href="/mytimeline">My Timeline</a></li>
-        <li><a class="nav-item nav-link active" href="/myposts">My Posts</a></li>
-        <li><a class="nav-item nav-link" href="/users">Users</a></li>
-        <li><a class="nav-item nav-link" href="/myprofile">My Profile</a></li>
+        <li><a class="nav-item nav-link" href="/mytimeline.html">My Timeline</a></li>
+        <li><a class="nav-item nav-link active" href="/myposts.html">My Posts</a></li>
+        <!-- <li><a class="nav-item nav-link" href="/users">Users</a></li> -->
+        <li><a class="nav-item nav-link" href="/myprofile.html">My Profile</a></li>
       </ul>
 </div>
   </nav>
@@ -114,7 +113,7 @@
       
             <div class="form-group row justify-content-center">
               <div class="col-sm-10 mx-auto">
-                <button type="submit" class="btn btn-primary" id="updatebtn">Update Post</button>
+                <button type="submit" class="btn btn-primary">Update Post</button>
               </div>
             </div>
           </form>
