--- a/public/mytimeline.html
+++ b/public/mytimeline.html
@@ -63,10 +63,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="navbar-nav ml-auto">
-        <li><a class="nav-item nav-link active" href="/mytimeline">My Timeline<span class="sr-only">(current)</span></a></li>
-        <li><a class="nav-item nav-link" href="/myposts">My Posts</a></li>
-        <li><a class="nav-item nav-link" href="/users">Users</a></li>
-        <li><a class="nav-item nav-link" href="/myprofile">My Profile</a></li>
+        <li><a class="nav-item nav-link active" href="/mytimeline.html">My Timeline<span class="sr-only">(current)</span></a></li>
+        <li><a class="nav-item nav-link" href="/myposts.html">My Posts</a></li>
+        <!-- <li><a class="nav-item nav-link" href="/users">Users</a></li> -->
+        <li><a class="nav-item nav-link" href="/myprofile.html">My Profile</a></li>
       </ul>
 </div>
   </nav>
