--- a/public/search.html
+++ b/public/search.html
@@ -45,6 +45,7 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
+    <link href="css/timeline.css" rel="stylesheet">
   </head>
   <body>
    
@@ -61,10 +62,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="navbar-nav ml-auto">
-        <li><a class="nav-item nav-link" href="/mytimeline">My Timeline<span class="sr-only">(current)</span></a></li>
-        <li><a class="nav-item nav-link" href="/myposts">My Posts</a></li>
-        <li><a class="nav-item nav-link" href="/users">Users</a></li>
-        <li><a class="nav-item nav-link" href="/myprofile">My Profile</a></li>
+        <li><a class="nav-item nav-link" href="/mytimeline.html">My Timeline<span class="sr-only">(current)</span></a></li>
+        <li><a class="nav-item nav-link" href="/myposts.html">My Posts</a></li>
+        <li><a class="nav-item nav-link" href="/users.html">Users</a></li>
+        <li><a class="nav-item nav-link" href="/myprofile.html">My Profile</a></li>
       </ul>
 </div>
   </nav>
